experiment_output/error_log/nondex-BrassMC-Bradle.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task629/wd/NonDex-plugin-test/github.com/BrassMC/Bradle/src/main/groovy/io/github/brassmc/bradle/mapping/deobf/DeobfuscatingRepo.java:111: error: illegal start of expression
        public MinecraftExtension.Mappings asMaps() {
        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task629/wd/NonDex-plugin-test/github.com/BrassMC/Bradle/src/main/groovy/io/github/brassmc/bradle/mapping/deobf/DeobfuscatingRepo.java:115: error: class, interface, or enum expected
}
^
2 errors
startup failed:
Compilation failed; see the compiler error output for details.

1 error


FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileGroovy'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 30s
